modified graph name

--- a/general.ipynb
+++ b/general.ipynb
@@ -134,7 +134,7 @@
     "plt.xscale('log')\n",
     "plt.xlabel('Alpha Value')\n",
     "plt.ylabel('Accuracy')\n",
-    "plt.title('Effect of Alpha on Model Accuracy')\n",
+    "plt.title('Effect of Alpha on MultinomialNB Model Accuracy')\n",
     "plt.grid(True)\n",
     "plt.show()\n"
    ]
